--- a/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
+++ b/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
@@ -39,8 +39,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WhatTheHack">
-      <HintPath>..\..\..\..\..\WTH-Forked\1.3\Assemblies\WhatTheHack.dll</HintPath>
+    <Reference Include="VFECore">
+      <HintPath>..\..\..\..\..\VanillaExpandedFramework\1.3\Assemblies\VFECore.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
