--- a/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
+++ b/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
@@ -45,9 +45,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building_MechanoidPad.cs" />
+    <Compile Include="HarmonyPatches\BuildingBed_Patches.cs" />
+    <Compile Include="HarmonyPatches\GenDraw_DrawInteractionCell_Patch.cs" />
+    <Compile Include="HarmonyPatches\GenerateImpliedDefs_PreResolve_Patch.cs" />
+    <Compile Include="HarmonyPatches\GenRecipe_MakeRecipeProducts_Patch.cs" />
+    <Compile Include="HarmonyPatches\GizmoGridDrawer_DrawGizmoGrid_Patch.cs" />
+    <Compile Include="HarmonyPatches\HealthCardUtility_DrawHealthSummary.cs" />
+    <Compile Include="HarmonyPatches\HealthCardUtility_DrawMedOperationsTab.cs" />
+    <Compile Include="HarmonyPatches\HealthCardUtility_DrawPawnHealthCard.cs" />
+    <Compile Include="HarmonyPatches\ITab_Pawn_Health_ShouldAllowOperations.cs" />
+    <Compile Include="HarmonyPatches\PawnComponentsUtility_AddAndRemoveDynamicComponents.cs" />
+    <Compile Include="HarmonyPatches\PawnUIOverlay_DrawPawnGUIOverlay.cs" />
+    <Compile Include="HarmonyPatches\Pawn_EquipmentTracker_DestroyEquipment.cs" />
+    <Compile Include="HarmonyPatches\Pawn_EquipmentTracker_DropAllEquipment.cs" />
+    <Compile Include="HarmonyPatches\StatWorker_IsDisabledFor.cs" />
+    <Compile Include="MechanoidFoundryMod.cs" />
+    <Compile Include="Recipes\RecipeHackMechanoid.cs" />
+    <Compile Include="Recipes\RecipeMakeMechanoid.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="MechanoidFoundryDefOf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkGiver_DoBillHacking.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Publicizer">
