--- a/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
+++ b/1.3/Source/MechanoidFoundry/MechanoidFoundry/MechanoidFoundry.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Building_MechanoidPad.cs" />
+    <Compile Include="BuildProperties.cs" />
     <Compile Include="CompMechanoidPad.cs" />
     <Compile Include="HarmonyPatches\BuildingBed_Patches.cs" />
     <Compile Include="HarmonyPatches\GenDraw_DrawInteractionCell_Patch.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="HarmonyPatches\Pawn_EquipmentTracker_DropAllEquipment.cs" />
     <Compile Include="HarmonyPatches\Pawn_HealthTracker_HealthTick.cs" />
     <Compile Include="HarmonyPatches\StatWorker_IsDisabledFor.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="MechanoidFoundryDefOf.cs" />
     <Compile Include="MechanoidFoundryMod.cs" />
     <Compile Include="Recipes\RecipeModifyMechanoid.cs" />
@@ -72,19 +74,21 @@
     <Compile Include="Recipes\RecipeMakeMechanoid.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
+    <Compile Include="Window_SelectItem.cs" />
     <Compile Include="WorkGiver_DoBillHacking.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Publicizer">
-      <Version>1.0.1</Version>
+      <Version>2.0.1</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.3.3200</Version>
+      <Version>1.3.3389</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
-      <Version>2.2.0</Version>
+      <Version>2.2.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
